[project]
name = "project1-solovyev-sergey-dpo-nod"
version = "0.1.0"
description = "Домашнее задание 1"
authors = [
    {name = "Solovyev Sergey"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
 packages = [
     { include = "labyrinth_game" },
 ]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"