[tool.poetry]
name = "project1-solovyev-sergey-dpo-nod"
version = "0.1.0"
description = "Текстовая adventure-игра «Лабиринт сокровищ» для закрепления основ Python и Git"
authors = ["Solovyev Sergey"]
readme = "README.md"
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.2,<0.15.0"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"